--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 body {
   background: black;
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Courier New", Courier, monospace;
 }
 
 header {
@@ -16,37 +16,82 @@ header {
 }
 
 .container {
-  border: springgreen 2px solid;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
 header img {
-  width: 500px;
-  height: 300px;
+  width: 600px;
+  height: 150px;
   object-fit: cover;
   border-radius: 5px;
   border: rgb(66, 62, 62) 3px solid;
+  margin: 50px;
+  margin-left: 102px;
+  border-radius: 20px;
 }
 
 .search-bar {
-  width: 300px;
-  background: rgb(66, 62, 62);
+  width: 350px;
   color: white;
-  margin-left: 791px;
+  margin-left: 463px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.search-bar input {
+  width: 500px;
+  background: rgb(66, 62, 62);
+  height: 50px;
+  font-size: large;
+  font-family: "Courier New", Courier, monospace;
+  border: none;
+  border-radius: 20px;
+  padding-left: 10px;
+  margin-bottom: 45px;
 }
 .card {
-  border: tomato solid 2px;
   height: 500px;
   width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(66, 62, 62);
+  margin: 5px;
+  border-radius: 20px;
+}
+
+.favoris-button {
+  background: rgb(66, 62, 62);
+  color: white;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .card img {
   height: 300px;
   width: 200px;
   object-fit: cover;
+  border: solid black 4px;
+  border-radius: 10px;
+}
+
+.card p {
+  margin-left: 5px;
+}
+
+.card h3 {
+  font-family: "Courier New", Courier, monospace;
+  margin-bottom: 10px;
+  font-size: larger;
+  font-weight: bold;
+}
+
+footer {
+  border: blue solid 2px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
 }
