--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,16 @@ header {
   justify-content: center;
 }
 
+header button {
+  background: rgb(66, 62, 62);
+  color: white;
+  height: 60px;
+  margin: 10px;
+  font-family: "Courier New", Courier, monospace;
+  border-radius: 20px;
+  margin-top: 100px;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -59,6 +69,7 @@ header img {
   background-color: rgb(66, 62, 62);
   margin: 5px;
   border-radius: 20px;
+  padding-top: 5px;
 }
 
 .favoris-button {
@@ -71,8 +82,8 @@ header img {
 }
 
 .card img {
-  height: 300px;
-  width: 200px;
+  height: 325px;
+  width: 350px;
   object-fit: cover;
   border: solid black 4px;
   border-radius: 10px;
@@ -80,6 +91,7 @@ header img {
 
 .card p {
   margin-left: 5px;
+  font-size: smaller;
 }
 
 .card h3 {
@@ -90,8 +102,27 @@ header img {
 }
 
 footer {
-  border: blue solid 2px;
   height: 100px;
   display: flex;
   justify-content: center;
+}
+
+footer button {
+  background: rgb(66, 62, 62);
+  color: white;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: "Courier New", Courier, monospace;
+  height: 60px;
+}
+
+footer div {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  font-size: xx-large;
+  width: 60px;
+  padding-top: 20px;
+  padding-left: 20px;
 }
