--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,17 @@
 
 * {
   box-sizing: border-box;
+  -ms-overflow-style: none;
+  overflow: -moz-scrollbars-none;
+}
+*::-webkit-scrollbar {
+  display: none;
 }
 
 body {
   background: black;
   color: white;
   font-family: "Courier New", Courier, monospace;
-}
-
-header {
-  display: flex;
-  justify-content: center;
 }
 
 header button {
@@ -43,11 +43,11 @@ header img {
 }
 
 .search-bar {
-  width: 350px;
   color: white;
-  margin-left: 463px;
+  display: flex;
   margin-top: 5px;
   margin-bottom: 5px;
+  justify-content: center;
 }
 .search-bar input {
   width: 500px;
@@ -70,6 +70,11 @@ header img {
   margin: 5px;
   border-radius: 20px;
   padding-top: 5px;
+  overflow: auto;
+}
+
+.card::-webkit-scrollbar {
+  display: none;
 }
 
 .favoris-button {
