--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ header img {
 .card h3 {
   font-family: "Courier New", Courier, monospace;
   margin-bottom: 10px;
+  margin-left: 15px;
   font-size: larger;
   font-weight: bold;
 }
