--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,14 @@ header img {
   display: flex;
   margin-top: 5px;
   margin-bottom: 5px;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+.search-bar p {
+  margin-bottom: 20px;
+  color: rgb(124, 124, 124);
+}
+
 .search-bar input {
   width: 500px;
   background: rgb(66, 62, 62);
@@ -58,7 +64,7 @@ header img {
   border: none;
   border-radius: 20px;
   padding-left: 10px;
-  margin-bottom: 45px;
+  margin-bottom: 30px;
 }
 .card {
   height: 500px;
@@ -92,6 +98,11 @@ header img {
   object-fit: cover;
   border: solid black 4px;
   border-radius: 10px;
+}
+
+.card img:hover {
+  opacity: 0.6;
+  transition: 0.8;
 }
 
 .card p {
